Bug 427410 - [tools area] Toolbars in docks have the wrong background color
Summary: [tools area] Toolbars in docks have the wrong background color
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-10-07 06:55 UTC by David Redondo
Modified: 2020-10-14 07:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the wrong behavior (9.50 KB, image/png)
2020-10-07 06:55 UTC, David Redondo
Details
Look before 509ff6bc (10.07 KB, image/png)
2020-10-07 06:59 UTC, David Redondo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Redondo 2020-10-07 06:55:59 UTC
Created attachment 132186 [details]
Screenshot of the wrong behavior

SUMMARY
They are drawn with the window color instead of the lighter one used for docks.
Also draws a line below them.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 1 David Redondo 2020-10-07 06:59:44 UTC
Created attachment 132187 [details]
Look before 509ff6bc
Comment 2 Nate Graham 2020-10-07 20:05:52 UTC
The line may be intentional (at least I think it's an improvement) but the color clearly is not.
Comment 3 Bug Janitor Service 2020-10-13 10:06:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/40
Comment 4 David Redondo 2020-10-14 07:08:54 UTC
Git commit 0a8a4bd1c310d73c9952886d80d1d1d5bdff7350 by David Redondo.
Committed on 13/10/2020 at 10:04.
Pushed by davidre into branch 'master'.

Do not alter the toolbars of QMainWindows that are not windows

It can happen that an application uses a QMainWindow in its widget hierachy for
its features but does not correspond to an actual window. Only alter those
toolbars for the unified look whose QMainWindows are actual windows and as such
have a window decoration.

M  +2    -1    kstyle/breezestyle.cpp
M  +4    -2    kstyle/breezetoolsareamanager.cpp

https://invent.kde.org/plasma/breeze/commit/0a8a4bd1c310d73c9952886d80d1d1d5bdff7350